--- a/README
+++ b/README
@@ -17,7 +17,7 @@ Unfortunately it's not possible to keep development under the hood of KDE projec
 
   Any changes from upstream are regularly merged back to this fork. So it has all the best from both worlds.
 
-  If anyone desires to split the fork into smaller changes and make pull requests to the upstream, I'll support it as much as I can.
+  If anyone desires to split the fork into smaller changes and make pull requests to the upstream, Psi IM team will support this as much as possible. Feel free to join our [XMPP chat](xmpp:psi-dev@conference.jabber.ru?join).
 
 Description
 -----------
